--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "chai": "^2.3.0",
     "mocha": "~1.16.2"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "homepage": "https://github.com/lucidogen/lucy-boot#readme",
   "directories": {
     "test": "test"
