Adding cpr to be executed in main process to avoid uv_pipe errors.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mocha": "~1.16.2"
   },
   "dependencies": {
+    "cpr": "^0.4.1",
     "jquery": "^2.1.4"
   },
   "homepage": "https://github.com/lucidogen/lucy-boot#readme",
