--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
 language: node_js
 node_js:
-  #  Uncomment once node.js has caught up with io.js in terms of
-  #  ES6 support.
-  #  - "stable" 
-  - "iojs"
+  - "stable" 
